# worklog

./: Cargo.toml  README.md  sqlx-data.json
migrations/: 20220702194225_events.down.sql  20220702194225_events.up.sql
migrations/2022-06-25-203954_create_events/: down.sql  up.sql
migrations/2022-06-25-221352_add_timestamp_index/: down.sql  up.sql
migrations/2022-07-02-095954_add_default_evt_types/: down.sql  up.sql
queries/: count_events_today.sql  events_between.sql
src/: action.rs  cli.rs  cli_parser.lalrpop  cli_parser.pest  db.rs  lib.rs  main.rs  models.rs  paths.rs  schema.rs
