[package]
name = "worklog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
chrono-english = "0.1.7"
color-eyre = "0.6.1"
dirs = "4.0.0"
futures = "0.3.21"
lazy_static = "1.4.0"
peg = "0.8.0"
sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
supports-hyperlinks = "1.2.0"
terminal-link = "0.1.0"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }

# compile sqlx macros with optimizations even in dev mode to speed up basic
# cargo check, etc.
[profile.dev.package.sqlx-macros]
opt-level = 3
