[package]
name = "worklog"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-english = "0.1.7"
color-eyre = "0.6.3"
dirs = "5.0.1"
futures = "0.3.31"
lazy_static = "1.5.0"
peg = "0.8.4"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "chrono", "migrate"] }
supports-hyperlinks = "3.0.0"
terminal-link = "0.1.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
